add signup step-3

--- a/References/Front-End/signup.html
+++ b/References/Front-End/signup.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
+            integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+            crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/custom.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,75 +21,76 @@
 <body>
 
 
-    <section class="vh-100" style="background-color: #e7f8ff;">
-        <div class="container py-5 h-100">
-            <div class="row d-flex justify-content-center align-items-center h-100">
-                <div class="col col-xl-10">
-                    <div class="card" style="border-radius: 1rem;">
-                        <div class="row g-0">
-                            <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="images/cover.jpg" alt="login form" class="img-fluid"
-                                    style="border-radius: 1rem 0 0 1rem; height: 100%;" />
-                            </div>
-                            <div class="col-md-6 col-lg-7 d-flex align-items-center">
-                                <div class="card-body p-4 p-lg-5 text-black">
-                                    <div class="d-flex flex-row-reverse">
-                                        <form action="/en/i18n/setlang/" method="post"><input type="hidden"
-                                                name="csrfmiddlewaretoken"
-                                                value="tAx8p1aFLS2vJVBpdg5QKzN1kyqmep35xShtjxuo6rmy0PesH31q12Tv7auN3Wzw">
-                                            <div style="width: fit-content;">
-                                                <select onchange="this.form.submit()" name="language"
+<section class="vh-100" style="background-color: #e7f8ff;">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col col-xl-10">
+                <div class="card" style="border-radius: 1rem;">
+                    <div class="row g-0">
+                        <div class="col-md-6 col-lg-5 d-none d-md-block">
+                            <img src="images/cover.jpg" alt="login form" class="img-fluid"
+                                 style="border-radius: 1rem 0 0 1rem; height: 100%;"/>
+                        </div>
+                        <div class="col-md-6 col-lg-7 d-flex align-items-center">
+                            <div class="card-body p-4 p-lg-5 text-black">
+                                <div class="d-flex flex-row-reverse">
+                                    <form action="/en/i18n/setlang/" method="post"><input type="hidden"
+                                                                                          name="csrfmiddlewaretoken"
+                                                                                          value="tAx8p1aFLS2vJVBpdg5QKzN1kyqmep35xShtjxuo6rmy0PesH31q12Tv7auN3Wzw">
+                                        <div style="width: fit-content;">
+                                            <select onchange="this.form.submit()" name="language"
                                                     class="form-select" id="inputGroupSelect04"
                                                     aria-label="Default select example">
 
-                                                    <option value="fr">
-                                                        fr
-                                                    </option>
+                                                <option value="fr">
+                                                    fr
+                                                </option>
 
-                                                    <option value="en" selected>
-                                                        en
-                                                    </option>
+                                                <option value="en" selected>
+                                                    en
+                                                </option>
 
-                                                </select>
-                                            </div>
-                                        </form>
-                                    </div>
-                                    <form action="signup_step_one.html" method="get">
-                                        <input type="hidden">
-                                        <div class="d-flex align-items-center justify-content-center mb-3 pb-1">
-                                            <span class="h1 fw-bold mb-0"><img src="images/site_logo.png"
-                                                    style="height: 150px;" alt="FrenDate"></span>
+                                            </select>
                                         </div>
-                                        <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">It's Never too
-                                            late<br>to Find Match</h3>
-
-                                        <div class="form-outline mb-4">
-                                            <input type="text" id="username" name="username"
-                                                class="form-control form-control-lg" placeholder="Login" />
-                                        </div>
-
-                                        <div class="form-outline mb-4">
-                                            <input type="password" id="password1" name="password1"
-                                                class="form-control form-control-lg" placeholder="Password" />
-                                        </div>
-                                        <div class="form-outline mb-4">
-                                            <input type="password" id="password2" name="password2"
-                                                class="form-control form-control-lg" placeholder="Confirm Password" />
-                                        </div>
-                                        <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Sign Up</button>
-                                        </div>
-                                        <p class="mb-5 pb-lg-2" style="color: #393f81;">Have an account?<a
-                                                href="login.html" style="color: #393f81;">Sign In</a></p>
                                     </form>
                                 </div>
+                                <form action="signup_step_one.html" method="get">
+                                    <input type="hidden">
+                                    <div class="d-flex align-items-center justify-content-center mb-3 pb-1">
+                                            <span class="h1 fw-bold mb-0"><img src="images/site_logo.png"
+                                                                               style="height: 150px;"
+                                                                               alt="FrenDate"></span>
+                                    </div>
+                                    <h3 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">It's Never too
+                                        late<br>to Find Match</h3>
+
+                                    <div class="form-outline mb-4">
+                                        <input type="text" id="username" name="username"
+                                               class="form-control form-control-lg" placeholder="Login"/>
+                                    </div>
+
+                                    <div class="form-outline mb-4">
+                                        <input type="password" id="password1" name="password1"
+                                               class="form-control form-control-lg" placeholder="Password"/>
+                                    </div>
+                                    <div class="form-outline mb-4">
+                                        <input type="password" id="password2" name="password2"
+                                               class="form-control form-control-lg" placeholder="Confirm Password"/>
+                                    </div>
+                                    <div class="pt-1 mb-4">
+                                        <button class="btn btn-dark btn-lg btn-block" type="submit">Sign Up</button>
+                                    </div>
+                                    <p class="mb-5 pb-lg-2" style="color: #393f81;">Have an account?<a
+                                            href="login.html" style="color: #393f81;">Sign In</a></p>
+                                </form>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
 </body>
 
